Temaplete Fin de Plan

--- a/FinSuscripcion/index.html
+++ b/FinSuscripcion/index.html
@@ -68,8 +68,13 @@
       margin-bottom: 0.25rem;
       margin-top: 0rem;
     }
-    .email__body-info-compra p {
-      color: #000000;
+    .link__emprezar {
+      background: #0074F2;
+      border-radius: 4.65773px;
+      padding: 16px 30px;
+      color: #FFFFFF;
+      text-decoration: none;
+      display: inline-block;
     }
   </style>
 </head>
@@ -77,49 +82,34 @@
   <div class="email">
     <div class="email__body">
       <div class="email__body-header">
-        <img src="FondoNegociosOnline.png"/>
+        <img src="FinSFondoNegociosOnline.png"/>
       </div>
       <div class="email__body-content">
         <div>
-          <p>Hemos recibido el pago <br/> exitosamente.</p>
-          <p>¡Tu suscripción a <b>Negocios <br/> Online</b> ya está activa! </p>
-          <p>La fecha de tu próxima <br/> facturación es la siguiente: <br/> JULIO 06.</p>
+          <p>Tu suscripción en <b>Negocios <br/> Online está por terminar.</b></p>
+          <p>No dejes de impulsar tu negocio <br/> y renueva tu <b>Plan E-Commerce Integrado</b> ahora. </p>
+          <p><b>Puedes cancelar en cualquier<br/> momento. </b></p>
         </div>
-        <div style="padding-top: 18px; padding-bottom: 18px; color: #424242;">
-          <b>Detalles de tu compra:</b>
-        </div>
-        <div class="email__body-info-compra">
-          <p>Factura Electrónica: </p>
-          <p><b>FW01-00000137</b></p>
-          <p>Fecha del pedido: </p>
-          <p><b>6 de Junio de 2020</b></p>
-        </div>
-        <div style="padding-top: 24px; padding-bottom: 16px;">
-          <table style="width:100%">
-            <tr>
-              <th style="width: 65%;">Plan</th>
-              <th style="width: 35%;">Precio</th>
-            </tr>
-            <tr>
-              <td style="border-bottom: 2px solid #000000;">Plan Ecommerce Integrado</td>
-              <td style="border-bottom: 2px solid #000000;">S/ 39 /mes</td>
-            </tr>
-            <tr>
-              <td><b>Total</b></td>
-              <td><b>S/ 39</b></td>
-            </tr>
-          </table>
+        <div style="padding-top: 18px; padding-bottom: 24px; color: #424242; text-align: center;">
+          <a class="link__emprezar" href="http://cuenta.contasiscorp.test/membership/planes?app=darwin_negocios">Renovar ahora</a>
         </div>
         <div>
-          Para consultas respecto a sus <br/>
-          comprobantes electrónicos,<br/>
-          escribir al correo<br/>
-          <b>ventasonline@contasiscorp.com</b><br/>
-          o llamar al teléfono <b>949 970 564</b>.
+          Cualquier duda o consulta a: <br/>
+          <b>ventasonline@contasiscorp.com</b> <br/>
+          o al teléfono 949 970 564.
         </div>
-        <div style="padding-top: 16px; padding-bottom: 30px;">
-          Atentamente,<br/>
-          Equipo Contasiscorp.
+        <div style="padding-top: 16px; color: #2D4273;">
+          Juntos haremos <b>crecer <br/> tu negocio</b> desde donde estés y <br/>de forma segura.
+        </div>
+        <div>
+          <table style="width:50%">
+            <tr>
+              <td><a href="https://www.facebook.com/contasiscorpperu/"><img src="facebook.png"/></a></td>
+              <td><a href="https://www.youtube.com/channel/UCXHEcpJot0yRXpkPe_Hl2QQ?view_as=subscriber"><img src="youtube.png"/></a></td>
+              <td><a href="https://www.linkedin.com/company/contasiscorp-itc"><img src="linkedin.png"/></a></td>
+              <td><a href="https://www.instagram.com/contasiscorp/"><img src="instagram.png"/></a></td>
+            </tr>
+          </table>
         </div>
       </div>
       <div class="email__body-foot">
